[gd_scene load_steps=2 format=3 uid="uid://district_visual"]

[ext_resource type="Script" path="res://scripts/districts/district_visual.gd" id="1"]

[node name="DistrictVisual" type="Node2D"]
script = ExtResource("1")

[node name="Terrain" type="Polygon2D" parent="."]
color = Color(0.3, 0.35, 0.25, 1)

[node name="BorderLines" type="Node2D" parent="."]

[node name="GridOverlay" type="Node2D" parent="."]

[node name="NameLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 5.0
offset_right = 470.0
offset_bottom = 25.0
horizontal_alignment = 1
text = "District"

[node name="TrafficLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 22.0
offset_right = 470.0
offset_bottom = 38.0
horizontal_alignment = 1
text = "Traffic: 0"

[node name="AmbientParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 8
lifetime = 3.0
